Fix moving background on mobile..

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,17 @@
 body {
+    /*Image credit: Image by <a href="https://pixabay.com/users/anniespratt-4900708/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1869680">Annie Spratt</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1869680">Pixabay</a>*/
     background: url('../images/map.jpg') center/cover no-repeat fixed;
     position: relative;
     overflow-x: hidden;
+    height: calc(100vh + 106px);
+}
+body::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(3, 12, 75, 0.3), rgba(8, 5, 56, 0.2));
+    z-index: 1;
 }
 * {
     font-family: "Sansation", sans-serif;
@@ -14,23 +24,14 @@ body {
 
 /* Linked Hero- and Parallax-effect */
 .hero {
-    position: relative;
     height: calc(100vh + 106px);
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
 }
-/*Image credit: Image by <a href="https://pixabay.com/users/anniespratt-4900708/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1869680">Annie Spratt</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1869680">Pixabay</a>*/
 
-.hero::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, rgba(3, 12, 75, 0.3), rgba(8, 5, 56, 0.2));
-    z-index: 1;
-}  
 .hero-content {
     position: relative;
     z-index: 2;
@@ -313,7 +314,6 @@ nav {
       .developer-list {
         gap: 0 1rem;
     }
-
     .column p {
         font-size: 0.70rem;
     }
@@ -345,11 +345,8 @@ nav {
 }
 
 @media (max-width: 610px) {
-    .hero {
+    body {
         height: calc(100vh + 275px);
-    }
-    .hero-content {
-        height: 100vh;
     }
     .hero-cta {
         font-size: 1rem;
